<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Brockhaus and Efron Encyclopedia</string>
    <string name="title">Brockhaus and Efron Encyclopedic Dictionary</string>
    <string name="browse">By alphabet</string>
    <string name="search">Search</string>
    <string name="search_hint">Begin of word</string>
    <string name="word_not_found">Unfortunatly, words were not found</string>
    <string name="search_string_empty">Please, type text for search</string>
    <string name="progress_title">Loading</string>
    <string name="progress_text">Loading, please wait...</string>
    <string name="goto_menu">Go to search menu</string>
    <string name="rate_app"><u>Very appreciate for your comments and rates</u></string>
    <string name="error_search_try_again">Error on search. Please, try again</string>
    <string name="error_db_open">Error on opening database. Please, try to reinstall application</string>
    <string name="error_db_install">Error on database installation. Please, check that device has at least 40 MB of free memory (internal or SD-card)</string>
    <string name="database_init">Preparing database</string>
    <string name="search_full">Full text search \n(requires more time than regular search)</string>
    <!-- Preferences -->
    <string name="pref">Settings</string>
    <string name="pref_widget">Widget settings</string>
    <string name="pref_widget_refresh_auto">Words refresh</string>
    <string name="pref_widget_refresh_auto_summary">Automatic change of word in widget</string>
    <string name="pref_widget_refresh_interval">Refresh interval</string>
    <string name="pref_widget_refresh_interval_summary">Word refresh interval (seconds)</string>
    <string name="pref_text">Text settings</string>
    <string name="pref_text_capital_letters">Capital letters</string>
    <string name="pref_text_capital_letters_summary">Capital letters in search results list</string>
    <string name="pref_text_align">Text alignment</string>
    <string name="pref_text_align_summary">Text alignment in word description</string>
    <string-array name="pref_text_align_names">
    	<item>Wide</item>
    	<item>Left side</item>
    	<item>Right side</item>
    	<item>Center</item>
    </string-array>
    <string name="pref_text_font">Font</string>
    <string name="pref_text_font_summary">Text font in application</string>
    <string-array name="pref_text_font_names">
    	<item>Philosopher</item>
    	<item>Flow</item>
    	<item>Cuprum</item>
    	<item>Serif</item>
    	<item>Sans Serif</item>
    	<item>Monospace</item>
    </string-array>
    <string name="main_more_apps"><u>Get more applications</u></string>
    <string name="history">Search history</string>
    <string name="history_empty">Search history is empty</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarks_empty">Bookmarks list is empty</string>
    <string name="word_previous">Previous</string>
    <string name="word_next">Next</string>
    <string name="ad_mob_id">a14f075025b5b24</string>
</resources>
