<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/pref_widget"
		android:summary="@string/pref_widget">

		<CheckBoxPreference android:key="pref_widget_refresh_auto"
			android:title="@string/pref_widget_refresh_auto" 
			android:summary="@string/pref_widget_refresh_auto_summary"
			android:defaultValue="true" />
		
		<org.forzaverita.brefdic.preferences.SliderPreference 
			android:dependency="pref_widget_refresh_auto"
            android:key="pref_widget_refresh_interval"
            android:title="@string/pref_widget_refresh_interval"
            android:summary="@string/pref_widget_refresh_interval_summary" />

	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/pref_text"
		android:summary="@string/pref_text">
		
		<CheckBoxPreference android:key="pref_text_capital_letters"
			android:title="@string/pref_text_capital_letters" 
			android:summary="@string/pref_text_capital_letters_summary" />
		
		<ListPreference android:key="pref_text_align"
			android:title="@string/pref_text_align" 
			android:summary="@string/pref_text_align_summary"
			android:entries="@array/pref_text_align_names"
			android:entryValues="@array/pref_text_align_values"
			android:defaultValue="JUSTIFY" />
			
		<ListPreference android:key="pref_text_font"
			android:title="@string/pref_text_font" 
			android:summary="@string/pref_text_font_summary"
			android:entries="@array/pref_text_font_names"
			android:entryValues="@array/pref_text_font_values"
			android:defaultValue="PHILOSOPHER" />
		
	</PreferenceCategory>
	
</PreferenceScreen>